--- a/src/assets/components/MissionInput.css
+++ b/src/assets/components/MissionInput.css
@@ -1,3 +1,21 @@
-form {
+.mission-input-container {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+}
+
+.mission-form {
+    max-width: 400px;
     z-index: 3;
 }
+
+.mission-form textarea {
+    width: 250px;
+    height: 100px;
+    padding: 0.5rem;
+}
+
