--- a/src/assets/components/RoutineInput.css
+++ b/src/assets/components/RoutineInput.css
@@ -6,10 +6,13 @@
     height: 100vh;
     backdrop-filter: blur(0.2rem);
     z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h2 {
-    color: #242424;
+    color: var(--primary-color);
 }
 
 form {
@@ -21,6 +24,4 @@ form {
     position: absolute;
     max-width: 400px;
     background-color: var(--secondary-color);
-    top: 30%;
-    left: 30%;
 }
