--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,17 @@
   color: var(--secondary-color);
 }
 
-.app { 
+.app {
   width: 100%;
   height: 100vh;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items:center ;
+  justify-content: center;
+}
+
+.inner-app { 
   display: flex;
   align-items: center;
   justify-content: center;
