--- a/src/components/GoalsComponent.css
+++ b/src/components/GoalsComponent.css
@@ -1,3 +1,8 @@
+.goals-container {
+    max-height: 90vh;
+    overflow-y: scroll;
+    padding-right: 1rem;
+}
 .goals-container h2{
     display: flex;
     flex-direction: column;
