--- a/src/components/GoalsComponent.css
+++ b/src/components/GoalsComponent.css
@@ -1,8 +1,14 @@
 .goals-container {
+    width: 100%;
     max-height: 90vh;
-    overflow-y: scroll;
+    overflow: scroll;
     padding-right: 1rem;
 }
+
+.goals-container::-webkit-scrollbar {
+    display: none;
+}
+
 .goals-container h2{
     display: flex;
     flex-direction: column;
