--- a/src/components/WeekRoutine.css
+++ b/src/components/WeekRoutine.css
@@ -1,15 +1,35 @@
+.week-routine {
+    width: 100%;
+}
 
 .week-routine h2 {
     margin-bottom: 1rem;
 }
 
+.week-routine tr {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+}
+
+.week-routine th {
+    min-height: 3rem;
+    min-width: 6rem;
+    align-items: center;
+}
+
 .week-routine td, th {
     border: 1px solid var(--secondary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 0.5rem;
 }
 
 .week-routine td {
-    height: 2.5rem;
+    width: 100%;
+    height: 100%;
     cursor: pointer;
     text-align: center;
     transition: 0.5s;
