--- a/src/components/TasksInput.css
+++ b/src/components/TasksInput.css
@@ -1,3 +1,9 @@
+.tasks-container {
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 1rem;
+}
+
 .task-input-container {
     width: 100%;
     height: 100%;
