--- a/src/components/MissionInput.css
+++ b/src/components/MissionInput.css
@@ -9,6 +9,8 @@
 
 .mission-input-container form {
     display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
 }
 
 .mission-input-container form label {
