--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,50 @@ input[type="submit"] {
   cursor: pointer;
 }
 
+/* Tabela */
+table {
+  width: 100%;
+  display: flex;
+  border-spacing: 0;
+}
+
+tbody {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+tr {
+  display: grid;
+  grid-template-columns: repeat(8, 12%);
+}
+
+th {
+  font-size: 0.8rem;
+  font-weight: 700;
+  align-items: center;
+}
+
+td, th {
+  border: 1px solid var(--secondary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.5rem;
+}
+
+td {
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  text-align: center;
+  transition: 0.5s;
+}
+
+td:hover {
+  background-color: var(--hover-btn);
+}
+
 .light {
   --primary-color: #f0f8ff;
   --secondary-color: #242424;
